--- a/file/templates/file/info.html
+++ b/file/templates/file/info.html
@@ -5,5 +5,7 @@
 <a href="https://simi-cloud.s3.us-east-2.amazonaws.com/{{data.file}}.{{data.extension}}">
     download
 </a>
+
+{{icon}}
 {{data.file}}
 {{data.extension}}
