--- a/file/templates/file/repo.html
+++ b/file/templates/file/repo.html
@@ -1,8 +1,11 @@
+{% load custom_tags %}
+
 {% for i in data%}
    <div class="block">
       <div>{{i.category}}</div>
       <div>{{i.title}}</div>
       <div>{{i.content}}</div>
       <a href="https://simi-cloud.s3.us-east-2.amazonaws.com/{{i.file}}">{{i.file}}</a>
+      <img src='/static/icon/{{icon | get_obj_attr:i.extension}}.png'/>
       </div>
 {% endfor %} 
